WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142231
bmalloc: Miscellaneous cleanup
https://bugs.webkit.org/show_bug.cgi?id=142231
Summary
bmalloc: Miscellaneous cleanup
Geoffrey Garen
Reported
2015-03-03 12:22:08 PST
bmalloc: Miscellaneous cleanup
Attachments
Patch
(10.04 KB, patch)
2015-03-03 12:28 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(10.06 KB, patch)
2015-03-03 12:34 PST
,
Geoffrey Garen
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-03-03 12:28:04 PST
Created
attachment 247778
[details]
Patch
Geoffrey Garen
Comment 2
2015-03-03 12:34:34 PST
Created
attachment 247780
[details]
Patch
Andreas Kling
Comment 3
2015-03-03 13:13:36 PST
Comment on
attachment 247780
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=247780&action=review
r=me
> Source/bmalloc/bmalloc/Vector.h:92 > - vmDeallocate(m_buffer, vmSize(m_capacity * sizeof(T))); > + if (m_buffer) > + vmDeallocate(m_buffer, vmSize(m_capacity * sizeof(T)));
Whoops :o
Geoffrey Garen
Comment 4
2015-03-03 13:48:10 PST
Committed
r180953
: <
http://trac.webkit.org/changeset/180953
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug